Revoking automatic main branch build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,7 @@ workflows:
   merrimack-museum-workflow:
     jobs:
       - build
+        filters:
+          branches: 
+            ignore:
+              - main
