--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
 workflows:
   merrimack-museum-workflow:
     jobs:
-      - build
+      - build:
         filters:
           branches: 
               ignore:
