--- a/package.json
+++ b/package.json
@@ -11,18 +11,35 @@
     "test:ci": "jest"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.1.0",
+    "@mantine/code-highlight": "^7.1.0",
+    "@mantine/core": "^7.1.0",
+    "@mantine/dates": "^7.1.0",
+    "@mantine/dropzone": "^7.1.0",
+    "@mantine/form": "^7.1.0",
+    "@mantine/hooks": "^7.1.0",
+    "@mantine/modals": "^7.1.0",
+    "@mantine/notifications": "^7.1.0",
+    "@mantine/nprogress": "^7.1.0",
+    "@mantine/spotlight": "^7.1.0",
+    "@mantine/tiptap": "^7.1.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tabler/icons-react": "^2.38.0",
+    "@tiptap/extension-link": "^2.1.11",
+    "@tiptap/react": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "embla-carousel-react": "^7.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
@@ -35,6 +52,9 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4"
+    "jest-environment-jsdom": "^29.6.4",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
