--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@mantine/carousel": "^7.1.0",
     "@mantine/code-highlight": "^7.1.0",
     "@mantine/core": "^7.1.0",
@@ -26,6 +27,7 @@
     "@mantine/tiptap": "^7.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@tabler/icons-react": "^2.38.0",
+    "@tanstack/react-query": "^4.35.3",
     "@tiptap/extension-link": "^2.1.11",
     "@tiptap/react": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
@@ -39,6 +41,7 @@
     "embla-carousel-react": "^7.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "mantine-react-table": "^1.3.1",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
