--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^7.1.3",
     "@mantine/dates": "^7.1.3",
     "@mantine/dropzone": "^7.1.3",
+    "@mantine/ds": "^7.1.3",
     "@mantine/form": "^7.1.3",
     "@mantine/hooks": "^7.1.3",
     "@mantine/modals": "^7.1.3",
