--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mantine/form": "^7.1.3",
     "@mantine/hooks": "^7.1.3",
     "@mantine/modals": "^7.1.3",
-    "@mantine/notifications": "^7.1.3",
+    "@mantine/notifications": "^7.1.7",
     "@mantine/nprogress": "^7.1.3",
     "@mantine/spotlight": "^7.1.3",
     "@mantine/tiptap": "^7.1.3",
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "embla-carousel-react": "^8.0.0-rc14",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
