--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:ci": "jest"
+    "test:ci": "jest --passWithNoTests"
   },
   "dependencies": {
     "@mantine/carousel": "^7.1.3",
