--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "@babel/traverse": ">=7.23.2",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "postcss": "^8.4.31",
