--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@babel/traverse": ">=7.23.2",
     "@mantine/carousel": "^7.1.3",
     "@mantine/code-highlight": "^7.1.3",
     "@mantine/core": "^7.1.3",
