--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:ci": "jest --passWithNoTests"
   },
   "dependencies": {
-    "@babel/traverse": ">=7.23.2",
+    "@babel/traverse": "^7.23.2",
     "@mantine/carousel": "^7.1.3",
     "@mantine/code-highlight": "^7.1.3",
     "@mantine/core": "^7.1.3",
@@ -55,7 +55,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
-    "@babel/traverse": ">=7.23.2",
+    "@babel/traverse": "^7.23.2",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "postcss": "^8.4.31",
