--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
-AUTH_GOOGLE_ID=951325617358-20v7s22jr35ahu01qdoeg0onh7hagu37.apps.googleusercontent.com
-AUTH_GOOGLE_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+
+BEARER_USERNAME=moses
+BEARER_EMAIL=mwauram@merrimack.edu
+BEARER_PASSWORD=3g%uPLl7
+
+AUTH_GOOGLE_ID=267974961669-bb41aup95rvo8hded93v1tjoqr0m9l2h.apps.googleusercontent.com
+AUTH_GOOGLE_SECRET=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
+
+# Use Prefix NEXT_PUBLIC_ 
