--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "embla-carousel-react": "^8.0.0-rc14",
@@ -54,10 +55,10 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@babel/traverse": "^7.23.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
-    "@babel/traverse": "^7.23.2",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "postcss": "^8.4.31",
