--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 AUTH_GOOGLE_ID=951325617358-20v7s22jr35ahu01qdoeg0onh7hagu37.apps.googleusercontent.com
 AUTH_GOOGLE_SECRET=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
+SECRET="MY_STRONG_SECRET"
+NEXT_PUBLIC_SECRET=anything
+NEXTAUTH_SECRET=MYSECRETSNAPBOOK
