--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "fs": "^0.0.1-security",
+    "luxon": "^3.4.4",
     "next": "^13.5.5",
     "next-auth": "^4.24.3",
     "next-themes": "^0.2.1",
