--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "deps": "^1.0.0",
     "dotenv": "^16.3.1",
     "embla-carousel-react": "^8.0.0-rc14",
     "eslint": "8.49.0",
@@ -60,6 +61,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "@types/luxon": "^3.3.5",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "postcss": "^8.4.31",
