--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/nprogress": "^7.1.3",
     "@mantine/spotlight": "^7.1.3",
     "@mantine/tiptap": "^7.1.3",
+    "@mui/material": "^5.14.18",
     "@radix-ui/react-icons": "^1.3.0",
     "@tabler/icons-react": "^2.39.0",
     "@tiptap/extension-link": "^2.1.12",
