--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "cypress:open": "cypress open",
     "test": "jest --watch",
     "test:ci": "jest --passWithNoTests"
   },
@@ -59,12 +60,16 @@
   },
   "devDependencies": {
     "@babel/traverse": "^7.23.2",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.4",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.10",
     "@types/luxon": "^3.3.5",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
+    "@types/testing-library__user-event": "^4.2.0",
+    "cypress": "^13.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
     "postcss-simple-vars": "^7.0.1"
