--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ AUTH_GOOGLE_SECRET=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
 SECRET="MY_STRONG_SECRET"
 NEXT_PUBLIC_SECRET=anything
 NEXTAUTH_SECRET=MYSECRETSNAPBOOK
+NEXTAUTH_URL='http://localhost:3000'
