bug fixes, lost in merge

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ SECRET="MY_STRONG_SECRET"
 NEXT_PUBLIC_SECRET=anything
 NEXTAUTH_SECRET=MYSECRETSNAPBOOK
 NEXTAUTH_URL='http://localhost:3000'
-AWS_ACCESS_KEY="AKIAVJR3PUFJGDUPULRV"
-AWS_SECRET_KEY="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"
+AWS_ACCESS_KEY="AKIAVJR3PUFJAAHB6TAB"
+AWS_SECRET_KEY="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"
