--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test:ci": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.462.0",
     "@babel/traverse": "^7.23.2",
     "@mantine/carousel": "^7.1.3",
     "@mantine/code-highlight": "^7.1.3",
     "@mantine/core": "^7.1.3",
     "@mantine/dates": "^7.1.3",
-    "@mantine/dropzone": "^7.1.3",
-    "@mantine/ds": "^7.1.3",
-    "@mantine/form": "^7.1.3",
+    "@mantine/dropzone": "^7.2.2",
+    "@mantine/ds": "^7.2.2",
+    "@mantine/form": "^7.2.2",
     "@mantine/hooks": "^7.1.3",
     "@mantine/modals": "^7.1.3",
     "@mantine/notifications": "^7.1.7",
@@ -28,7 +29,7 @@
     "@mantine/tiptap": "^7.1.3",
     "@mui/material": "^5.14.18",
     "@radix-ui/react-icons": "^1.3.0",
-    "@tabler/icons-react": "^2.39.0",
+    "@tabler/icons-react": "^2.42.0",
     "@tiptap/extension-link": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
@@ -38,6 +39,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cypress": "^13.6.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "deps": "^1.0.0",
