added size category

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ SECRET="MY_STRONG_SECRET"
 NEXT_PUBLIC_SECRET=anything
 NEXTAUTH_SECRET=MYSECRETSNAPBOOK
 NEXTAUTH_URL='http://localhost:3000'
-AWS_ACCESS_KEY="AKIAVJR3PUFJAAHB6TAB"
-AWS_SECRET_KEY="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"
+AWS_ACCESS_KEY="AKIAVJR3PUFJKCY6U4ET"
+AWS_SECRET_KEY="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"
