--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.462.0",
     "@babel/traverse": "^7.23.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mantine/carousel": "^7.1.3",
     "@mantine/code-highlight": "^7.1.3",
     "@mantine/core": "^7.1.3",
