--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@tiptap/extension-link": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
-    "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -68,6 +67,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "@types/luxon": "^3.3.5",
+    "@types/node": "^20.11.16",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "postcss": "^8.4.31",
